fixing fit issues on mobile

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -155,7 +155,7 @@ a {
   position: fixed;
   margin-left: $right-width;
   display: inline-block;
-  height: 100%;
+  height: 120%;
   border-left: 1px dashed $grey;
   border-right: 2px dashed $grey;
   background-color: $crossover;
