--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -21,6 +21,7 @@
     ul {
       padding-top: 3px;
       margin-left: -25px;
+      width: 95%;
     }
     li {
       font-size: 20px;
